--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola</title>
-</head>
-<body>
-    <h1>Hola Mundo</h1>
-</body>
+<html lang="en" class="h-100">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="" />
+    <title>MDEIS - GRUPO 4</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+
+    <!-- Custom styles for this template -->
+    <link href="sticky-footer.css" rel="stylesheet" />
+  </head>
+  <body class="d-flex flex-column h-100">
+    <!-- Begin page content -->
+    <main class="flex-shrink-0">
+      <div class="container">
+        <h1 class="mt-5">Grupo 4 - GIT</h1>
+        <h3>Integrantes:</h3>
+        <ul>
+            <li><a href="renepolo.html" target="_blank">René Polo</a></li>
+            <li><a href="Claudia.html" target="_blank">Claudia Alfaro</a></li>
+            <li><a href="emm.html" target="_blank">Edson Mollericona</a></li>
+            <li><a href="arteaga.html" target="_blank">Johnny Arteaga Mendoza</a></li>
+            <li><a href="Vinx Junior Guzman Martinez/index.html" target="_blank">Junior Guzman Martinez</a></li>
+            <li><a href="enzoaranibar.html" target="_blank">Enzo Aranibar</a></li>
+            <li><a href="diego.html" target="_blank">Alvaro Diego Daza Alcaraz</a></li>
+        </ul>
+      </div>
+    </main>
+
+    <footer class="footer mt-auto py-3 bg-light">
+      <div class="container">
+        <span class="text-muted">MDEIS - GRUPO 4</span>
+      </div>
+    </footer>
+  </body>
 </html>
