--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Begin page content -->
     <main class="flex-shrink-0">
       <div class="container">
-        <h1 class="mt-5">Grupo 4 - GIT</h1>
+        <h1 class="mt-5">Grupo 4 - GIT & CLOUD SERVICE PROVIDER</h1>
         <h3>Integrantes:</h3>
         <ul>
             <li><a href="renepolo.html" target="_blank">René Polo</a></li>
