Ajuste pagina principal

--- a/diego.html
+++ b/diego.html
@@ -11,7 +11,7 @@
 
 		</tr>
 		<tr>
-			<td><img src="diego.JPG" width="200" height="200"></td>
+			<td><img src="diego.jpeg" width="200" height="200"></td>
 		</tr>
 	</table>
 </body>
