--- a/arteaga.html
+++ b/arteaga.html
@@ -6,6 +6,6 @@
 <body>
 	<h2>Johnny Arteaga Mendoza</h2>
 	<img src="arteaga.jpg" alt="">
-	<p>Volver</p>
+	<a href="index.html">Volver</a>
 </body>
 </html>
